# FlipDistance

./: .gitignore  CMakeLists.txt  README.md  config.h  data.txt  fd_bfs.cpp  main.cpp  main.py  playground.cpp  rand.cpp
algo/: flip_distance.h  flip_distance_bfs.h  flip_distance_dfs.h  flip_distance_fast.h  flip_distance_fpt.h  flip_distance_middle.h  flip_distance_original.h  flip_distance_simple.h  flip_distance_source.cpp  flip_distance_source.h  flip_distance_source2.h  flip_distance_source_fast.cpp  flip_distance_source_fast.h  flip_distance_source_no_split.h  flip_distance_utils.h  statistics.cpp  statistics.h
googletest/docs/: advanced.md  gmock_cook_book.md
googletest/docs/reference/: actions.md  matchers.md
googletest/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-more-actions.h
googletest/googletest/include/gtest/internal/: gtest-internal.h
tests/algo/: TestFlipDistance.cpp
tests/triangulation/: TestBinaryString.cpp  TestTriangulationGraph.cpp
triangulation/: BinaryString.cpp  BinaryString.h  BinaryTree.cpp  BinaryTree.h  Edge.h  Helper.cpp  Helper.h  TriangulatedGraph.cpp  TriangulatedGraph.h
utils/: helper.h  rand.cpp  rand.h
